hphp/test/zend/good/ext-sockets/socket_listen_params.php
<?php
    // wrong parameter count
    $s_c = socket_listen();
    var_dump($s_c);  
?>