hphp/test/zend/bad/ext/posix/tests/posix_seteuid_basic.php
<?php

$myuid = posix_geteuid();
$uid = var_dump(posix_seteuid( $myuid ) );

?>